fix mobile filter z-index

--- a/src/components/mainComponents/TabletFilter/TabletFilter.css
+++ b/src/components/mainComponents/TabletFilter/TabletFilter.css
@@ -3,7 +3,7 @@
   height: 70px;
   width: 30px;
   top: 105px;
-  z-index: 10;
+  z-index: 1000;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   background-color: white;
